--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "concurrently \"npm run serve\" \"node ngrok.js\""
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "clipboardy": "^2.3.0",
     "concurrently": "^5.2.0",
     "core-js": "^3.6.5",
