--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "monday-sdk-js": "^0.1.0",
+    "mongoose": "^5.9.28",
     "ngrok": "^3.2.7",
     "nodemon": "^2.0.4",
     "vue": "^2.6.11"
